style login to avoid scrollbar when snackbar shows up

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,6 @@
 .container {
+    position: absolute;
+    width: 100%;
     height: 100%;
     display: grid;
     grid-auto-flow: column;
